Add second page

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,3 +4,7 @@ $black: black;
 $white: rgb(255, 255, 255);
 $blue: #478ac9;
 $yellow: #f1c50e;
+$begie: #e5e5e5;
+$grey: rgb(83, 83, 83);
+$yellowTwo:rgb(255, 225, 106);
+
