--- a/css/global.css
+++ b/css/global.css
@@ -59,6 +59,7 @@ html {
 
 body {
   font-family: "Roboto", serif;
+  background-color: #e5e5e5;
 }
 
 .header-main-div {
@@ -89,8 +90,25 @@ body {
           align-items: center;
 }
 .header-main-div .header-ul-block .nav-li {
-  margin-right: 15px;
+  margin-right: 30px;
   cursor: pointer;
+}
+.header-main-div .header-ul-block .nav-li .dropdown-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  margin-top: 10px;
+  padding: 12px 16px;
+  display: none;
+}
+.header-main-div .header-ul-block .nav-li .dropdown-content a {
+  margin-top: 10px;
 }
 .header-main-div .header-ul-block .active-li {
   color: #478ac9;
@@ -144,6 +162,349 @@ body {
 .banner-img-div .banner-text-div .banner-button:hover {
   background-color: rgb(255, 255, 255);
   color: #f1c50e;
+}
+
+.section2 .section2-div {
+  max-width: 1000px;
+  width: 100%;
+  margin: 50px auto;
+  padding: 10px;
+}
+.section2 .section2-div .section2-title {
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 40px;
+}
+.section2 .section2-div .service-main-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.section2 .section2-div .service-main-block .service-div {
+  max-width: 220px;
+  width: 100%;
+  height: 300px;
+  background-color: rgb(255, 255, 255);
+  margin: 5px;
+  padding: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  border-top: 5px solid #f1c50e;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.section2 .section2-div .service-main-block .service-div .service-icon-div {
+  max-width: 70px;
+  width: 100%;
+  height: 70px;
+  border-radius: 50px;
+  background-color: #f1c50e;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.section2 .section2-div .service-main-block .service-div .service-icon-div .icon {
+  font-size: 30px;
+  color: rgb(255, 255, 255);
+}
+.section2 .section2-div .service-main-block .service-div .title-service {
+  font-size: 20px;
+  font-weight: 900;
+  margin: 20px 0;
+}
+.section2 .section2-div .service-main-block .service-div:hover {
+  -webkit-transform: translate(-5%);
+          transform: translate(-5%);
+}
+
+.section3-main-div {
+  position: relative;
+  max-width: 1100px;
+  width: 100%;
+  margin: 0 auto;
+  height: 1500px;
+}
+.section3-main-div .decoration-div {
+  max-width: 500px;
+  width: 100%;
+  height: 300px;
+  background-color: rgb(255, 255, 255);
+  padding: 30px;
+  -webkit-box-shadow: 5px 10px 30px rgb(83, 83, 83);
+          box-shadow: 5px 10px 30px rgb(83, 83, 83);
+  position: absolute;
+  top: 10%;
+  left: 20%;
+  z-index: 1;
+}
+.section3-main-div .decoration-div .decor-title {
+  font-size: 30px;
+  margin: 20px 0;
+}
+.section3-main-div .decoration-div .decor-title2 {
+  font-style: italic;
+  margin: 20px 0;
+}
+.section3-main-div .decoration-div .decor-text {
+  margin: 20px 0;
+}
+.section3-main-div .decoration-div button {
+  max-width: 180px;
+  width: 100%;
+  color: rgb(255, 255, 255);
+  background-color: #f1c50e;
+  padding: 15px;
+  border: solid;
+  border-color: rgb(255, 255, 255);
+  border-radius: 100px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-family: "Roboto", serif;
+  font-size: 20px;
+  cursor: pointer;
+}
+.section3-main-div .decoration-div button:hover {
+  background-color: transparent;
+  border-color: #f1c50e;
+  color: #f1c50e;
+}
+.section3-main-div .decor-img1 {
+  max-width: 350px;
+  width: 100%;
+  height: 400px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  top: 20%;
+  left: 2%;
+  -webkit-box-shadow: 5px 10px 30px rgb(83, 83, 83);
+          box-shadow: 5px 10px 30px rgb(83, 83, 83);
+}
+.section3-main-div .decor-img2 {
+  max-width: 400px;
+  width: 100%;
+  height: 400px;
+  position: absolute;
+  top: 60%;
+  left: 20%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: 1;
+  -webkit-box-shadow: 5px 10px 30px rgb(83, 83, 83);
+          box-shadow: 5px 10px 30px rgb(83, 83, 83);
+}
+.section3-main-div .decor-img3 {
+  max-width: 650px;
+  width: 100%;
+  height: 440px;
+  position: absolute;
+  top: 35%;
+  right: 0%;
+  -webkit-box-shadow: 5px 10px 30px rgb(83, 83, 83);
+          box-shadow: 5px 10px 30px rgb(83, 83, 83);
+}
+.section3-main-div .decor-img4 {
+  max-width: 500px;
+  width: 100%;
+  height: 350px;
+  position: absolute;
+  top: 75%;
+  right: 5%;
+  -webkit-box-shadow: 5px 10px 30px rgb(83, 83, 83);
+          box-shadow: 5px 10px 30px rgb(83, 83, 83);
+}
+.section3-main-div .text-decor-div {
+  max-width: 350px;
+  width: 100%;
+  padding: 30px;
+  border-left: 5px solid rgb(83, 83, 83);
+  position: absolute;
+  top: 87%;
+  left: 2%;
+}
+
+.visual-section1 .vidual-main-div {
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 900px;
+  position: relative;
+}
+.visual-section1 .vidual-main-div .visual-img {
+  max-width: 590px;
+  width: 100%;
+  height: 620px;
+  position: absolute;
+  top: 15%;
+  left: 20%;
+  z-index: 1;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.visual-section1 .vidual-main-div .visual-text-div {
+  max-width: 400px;
+  width: 100%;
+  height: 450px;
+  background-color: rgb(255, 255, 255);
+  padding: 30px;
+  -webkit-box-shadow: 5px 10px 30px rgb(83, 83, 83);
+          box-shadow: 5px 10px 30px rgb(83, 83, 83);
+  position: absolute;
+  top: 25%;
+  left: 55%;
+  z-index: 1;
+}
+.visual-section1 .vidual-main-div .visual-text-div .visual-title {
+  font-size: 40px;
+  margin: 20px 0;
+}
+.visual-section1 .vidual-main-div .visual-text-div .visual-title2 {
+  margin: 20px 0;
+  line-height: 30px;
+}
+.visual-section1 .vidual-main-div .visual-text-div .visual-text {
+  font-style: italic;
+  margin: 20px 0;
+}
+.visual-section1 .vidual-main-div .visual-text-div button {
+  max-width: 180px;
+  width: 100%;
+  color: rgb(255, 255, 255);
+  background-color: #f1c50e;
+  padding: 15px;
+  border: solid;
+  border-color: rgb(255, 255, 255);
+  border-radius: 100px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-family: "Roboto", serif;
+  font-size: 20px;
+  cursor: pointer;
+}
+.visual-section1 .vidual-main-div .visual-text-div button:hover {
+  background-color: transparent;
+  border-color: #f1c50e;
+  color: #f1c50e;
+}
+.visual-section1 .vidual-main-div .yellow-decor-rect {
+  max-width: 600px;
+  width: 100%;
+  height: 300px;
+  background-color: #f1c50e;
+  position: absolute;
+  bottom: 10%;
+  right: 15%;
+}
+.visual-section1 .vidual-main-div .yellow-decor-circle {
+  max-width: 200px;
+  width: 100%;
+  height: 200px;
+  background-color: rgb(255, 225, 106);
+  border-radius: 100px;
+  position: absolute;
+  top: 10%;
+  right: 12%;
+}
+.visual-section1 .vidual-main-div .yellow-decor {
+  max-width: 300px;
+  width: 100%;
+  height: 300px;
+  border-radius: 300px;
+  border: 1px solid #f1c50e;
+  position: absolute;
+  bottom: 5%;
+  left: 10%;
+}
+
+.prototype-section .mySwiper {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.prototype-section .mySwiper .swiper-wrapper {
+  max-width: 1140px;
+  width: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.prototype-section .mySwiper .swiper-wrapper .swiper-slide {
+  max-width: 300px;
+  width: 100%;
+  padding: 15px;
+  background-color: rgb(255, 255, 255);
+  text-align: center;
+  height: 500px;
+  border-radius: 15px;
+  -webkit-box-shadow: 5px 5px 15px rgb(83, 83, 83);
+          box-shadow: 5px 5px 15px rgb(83, 83, 83);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.prototype-section .mySwiper .swiper-wrapper .swiper-slide img {
+  max-width: 250px;
+  width: 100%;
+  height: 200px;
+}
+.prototype-section .mySwiper .swiper-wrapper .swiper-slide h3 {
+  font-size: 30px;
+  padding: 20px;
+}
+.prototype-section .mySwiper .swiper-wrapper .swiper-slide p {
+  line-height: 25px;
+}
+.prototype-section .mySwiper .swiper-wrapper .swiper-slide button {
+  max-width: 100px;
+  width: 100%;
+  color: rgb(255, 255, 255);
+  background-color: #f1c50e;
+  padding: 10px;
+  border: solid;
+  border-color: rgb(255, 255, 255);
+  border-radius: 100px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-family: "Roboto", serif;
+  font-size: 15px;
+  cursor: pointer;
+}
+.prototype-section .mySwiper .swiper-wrapper .swiper-slide button:hover {
+  background-color: transparent;
+  border-color: #f1c50e;
+  color: #f1c50e;
+}
+.prototype-section .mySwiper .swiper-wrapper .swiper-slide:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 @font-face {
