--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3,6 +3,8 @@ html {
 }
 body{
     font-family: $roboto;
+    background-color: $begie;
+
 }
 // header
 .header-main-div{
@@ -15,14 +17,27 @@ body{
     .header-ul-block{
         @include d-flex(flex, space-between, center);
         .nav-li{
-            margin-right: 15px;
+            margin-right: 30px;
             cursor: pointer;
+            .dropdown-content{
+                display: flex;
+                flex-direction: column;
+                background-color: #f9f9f9;
+                min-width: 160px;
+                margin-top: 10px;
+                padding: 12px 16px;
+                a{
+                    margin-top: 10px;
+                }
+                display: none;
+            }
         }
         .active-li{
             color: $blue;
         }
     
     }
+    
 }
 
 // section 1
@@ -76,3 +91,330 @@ body{
     }
 }
 
+// section2
+.section2{
+
+    .section2-div{
+        max-width: 1000px;
+        width: 100%;
+        margin: 50px auto;
+
+        padding: 10px;
+
+    
+        .section2-title{
+            font-size: 40px;
+            text-align: center;
+            margin-bottom: 40px;
+
+        }
+        .service-main-block{
+            @include d-flex(flex, space-between, center);
+            .service-div{
+                max-width: 220px;
+                width: 100%;
+                height: 300px;
+                background-color: $white;
+                margin: 5px;
+                padding: 30px;
+                @include d-flex(flex, center, center);
+                flex-direction: column;
+                text-align: center;
+                border-top: 5px solid $yellow;
+                transition: 0.5s;
+                cursor: pointer;
+                .service-icon-div{
+                    max-width: 70px;
+                    width: 100%;
+                    height: 70px;
+                    border-radius: 50px;
+                    background-color: $yellow;
+                    text-align: center;
+                    @include d-flex(flex, center, center);
+                    .icon{
+                        font-size: 30px;
+                        color: $white;
+                    }
+                }
+                .title-service{
+                    font-size: 20px;
+                    font-weight: 900;
+                    margin: 20px 0;
+                }
+            }
+            .service-div:hover{
+                transform: translate(-5%);
+            }
+
+        }
+    }
+
+}
+
+
+// section3
+.section3-main-div{
+    position: relative;
+    max-width: 1100px;
+    width: 100%;
+    margin: 0 auto;
+    height: 1500px;
+
+    .decoration-div{
+        max-width: 500px;
+        width: 100%;
+        height: 300px;
+        background-color: $white;
+        padding: 30px;
+        box-shadow: 5px 10px 30px $grey;
+        position: absolute;
+        top: 10%;
+        left: 20%;
+        z-index: 1;
+        .decor-title{
+            font-size: 30px;
+            margin: 20px 0;
+        }
+        .decor-title2{
+            font-style: italic;
+            margin: 20px 0;
+        }
+        .decor-text{
+            margin: 20px 0;
+        }
+        button{
+            max-width: 180px;
+            width: 100%;
+            color: $white;
+            background-color: $yellow;
+            padding: 15px;
+            border: solid;
+            border-color: $white;
+            border-radius: 100px;
+            transition: 0.5s;
+            font-family: $roboto;
+            font-size: 20px;
+            cursor: pointer;
+        }
+        button:hover{
+            background-color: transparent;
+            border-color: $yellow;
+            color: $yellow;
+        }
+
+    }
+    .decor-img1{
+        max-width: 350px;
+        width: 100%;
+        height: 400px;
+        object-fit: cover;
+        position: absolute;
+        top: 20%;
+        left: 2%;
+        box-shadow: 5px 10px 30px $grey;
+    }
+    .decor-img2{
+        max-width: 400px;
+        width: 100%;
+        height: 400px;
+        position: absolute;
+        top: 60%;
+        left: 20%;
+        object-fit: cover;
+        z-index: 1;
+        box-shadow: 5px 10px 30px $grey;
+    }
+    .decor-img3{
+        max-width: 650px;
+        width: 100%;
+        height: 440px;
+        position: absolute;
+        top: 35%;
+        right: 0%;
+        box-shadow: 5px 10px 30px $grey;
+    }
+    .decor-img4{
+        max-width: 500px;
+        width: 100%;
+        height: 350px;
+        position: absolute;
+        top: 75%;
+        right: 5%;
+        box-shadow: 5px 10px 30px $grey;
+    }
+    .text-decor-div{
+        max-width: 350px;
+        width: 100%;
+        padding: 30px;
+        border-left: 5px solid $grey;
+        position: absolute;
+        top: 87%;
+        left: 2%
+
+    }
+
+}
+
+
+
+
+// visual.html
+.visual-section1{
+    .vidual-main-div{
+        background-color: $white;
+        width: 100%;
+        height: 900px;
+        position: relative;
+
+        .visual-img{
+            max-width: 590px;
+            width: 100%;
+            height: 620px;
+            position: absolute;
+            top: 15%;
+            left: 20%;
+            z-index: 1;
+            object-fit: cover;
+        }
+        .visual-text-div{
+            max-width: 400px;
+            width: 100%;
+            height: 450px;
+            background-color: $white;
+            padding: 30px;
+            box-shadow: 5px 10px 30px $grey;
+            position: absolute;
+            top: 25%;
+            left: 55%;
+            z-index: 1;
+
+
+            .visual-title{
+                font-size: 40px;
+                margin: 20px 0;
+    
+            }
+            .visual-title2{
+                margin: 20px 0;
+                line-height: 30px;
+            }
+            .visual-text{
+                font-style: italic;
+                margin: 20px 0;
+            }
+            button{
+                max-width: 180px;
+                width: 100%;
+                color: $white;
+                background-color: $yellow;
+                padding: 15px;
+                border: solid;
+                border-color: $white;
+                border-radius: 100px;
+                transition: 0.5s;
+                font-family: $roboto;
+                font-size: 20px;
+                cursor: pointer;
+            }
+            button:hover{
+                background-color: transparent;
+                border-color: $yellow;
+                color: $yellow;
+            }
+        }
+        .yellow-decor-rect{
+            max-width: 600px;
+            width: 100%;
+            height: 300px;
+            background-color: $yellow;
+            position: absolute;
+            bottom: 10%;
+            right: 15%;
+
+        }
+        .yellow-decor-circle{
+            max-width: 200px;
+            width: 100%;
+            height: 200px;
+            background-color: $yellowTwo;
+            border-radius: 100px;
+            position: absolute;
+            top: 10%;
+            right: 12%;
+        }
+        .yellow-decor{
+            max-width: 300px;
+            width: 100%;
+            height: 300px;
+            border-radius: 300px;
+            border: 1px solid $yellow;
+            position: absolute;
+            bottom: 5%;
+            left: 10%;
+        }       
+    }
+}
+
+// prototype-section
+.prototype-section{
+    .mySwiper{
+        padding-top: 100px;
+        padding-bottom: 100px;
+        .swiper-wrapper{
+            max-width: 1140px;
+            width: 100%;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            .swiper-slide {
+                max-width: 300px;
+                width: 100%;
+                padding: 15px;
+                background-color: $white;
+                text-align: center;
+                height: 500px;
+                border-radius: 15px;
+                box-shadow: 5px 5px 15px $grey;
+                transition: 0.5s;
+                cursor: pointer;
+                img{
+                    max-width: 250px;
+                    width: 100%;
+                    height: 200px;
+                    
+                }
+                h3{
+                    font-size: 30px;
+                    padding: 20px;
+                }
+                p{
+                    line-height: 25px;
+                }
+                button{
+                    max-width: 100px;
+                    width: 100%;
+                    color: $white;
+                    background-color: $yellow;
+                    padding: 10px;
+                    border: solid;
+                    border-color: $white;
+                    border-radius: 100px;
+                    transition: 0.5s;
+                    font-family: $roboto;
+                    font-size: 15px;
+                    cursor: pointer;
+                }
+                button:hover{
+                    background-color: transparent;
+                    border-color: $yellow;
+                    color: $yellow;
+                }
+   
+            }
+            .swiper-slide:hover{
+                transform: scale(1.05);
+            }
+
+        }
+    }
+}
