--- a/css/global.css
+++ b/css/global.css
@@ -669,6 +669,66 @@ body {
   margin-bottom: 20px;
 }
 
+.footer {
+  background-color: rgb(83, 83, 83);
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.footer .footer-div {
+  max-width: 500px;
+  width: 100%;
+  height: 200px;
+}
+.footer .footer-div .lists {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: rgb(255, 255, 255);
+  max-width: 500px;
+}
+.footer .footer-div .lists .ul-list {
+  line-height: 30px;
+}
+.footer .footer-div .lists .ul-list .title {
+  font-weight: 900;
+  margin-bottom: 10px;
+}
+.footer .social-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 300px;
+  width: 100%;
+}
+.footer .social-icons .icon {
+  color: rgb(255, 255, 255);
+  font-size: 30px;
+  cursor: pointer;
+}
+.footer .social-icons .icon:hover {
+  color: #478ac9;
+}
+
 @font-face {
   font-family: "Roboto";
   src: url("../fonts/Roboto-Regular.eot");
