--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -562,3 +562,42 @@ body{
         }
     }
 }
+
+.footer{
+    background-color: $grey;
+    padding: 20px;
+    @include d-flex(flex, space-evenly, center);
+    .footer-div{
+        max-width: 500px;
+        width: 100%;
+        height: 200px;
+        .lists{
+            @include d-flex(flex, space-between, center);
+            color: $white;
+            max-width: 500px;   
+            .ul-list{
+                line-height: 30px;
+                .title{
+                    font-weight: 900;
+                    margin-bottom: 10px;
+                }
+            }
+        }
+
+    }
+    .social-icons{
+        @include d-flex(flex, space-between, center);
+        max-width: 300px;
+        width: 100%;
+        .icon{
+            color: $white;
+            font-size: 30px;
+            cursor: pointer;
+        }
+        .icon:hover{
+            color: $blue;
+        }
+            
+    }
+    
+}
