--- a/css/global.css
+++ b/css/global.css
@@ -77,8 +77,11 @@ body {
 }
 .header-main-div .header-logo-block {
   cursor: pointer;
+  font-size: 20px;
+  font-weight: 900;
 }
 .header-main-div .header-ul-block {
+  font-size: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -92,6 +95,7 @@ body {
 .header-main-div .header-ul-block .nav-li {
   margin-right: 30px;
   cursor: pointer;
+  font-size: 20px;
 }
 .header-main-div .header-ul-block .nav-li .dropdown-content {
   display: -webkit-box;
@@ -112,6 +116,7 @@ body {
 }
 .header-main-div .header-ul-block .active-li {
   color: #478ac9;
+  font-weight: 900;
 }
 
 .banner-img-div {
@@ -727,6 +732,80 @@ body {
 }
 .footer .social-icons .icon:hover {
   color: #478ac9;
+}
+
+.form-style-9 {
+  max-width: 700px;
+  background: rgb(255, 255, 255);
+  padding: 30px;
+  margin: 50px auto;
+  -webkit-box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.35);
+          box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.35);
+  border: 5px solid #f1c50e;
+}
+.form-style-9 .title {
+  margin-bottom: 30px;
+  font-size: 40px;
+  font-weight: 500;
+}
+.form-style-9 ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.form-style-9 ul li {
+  display: block;
+  margin-bottom: 10px;
+  min-height: 35px;
+}
+.form-style-9 ul li .field-style {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 8px;
+  outline: none;
+  border: none;
+  border-bottom: 3px solid rgb(83, 83, 83);
+}
+.form-style-9 ul li .field-style:focus {
+  -webkit-box-shadow: 0 5px 6px -6px rgb(83, 83, 83);
+          box-shadow: 0 5px 6px -6px rgb(83, 83, 83);
+}
+.form-style-9 ul li .field-split {
+  width: 49%;
+}
+.form-style-9 ul li .field-full {
+  width: 100%;
+}
+.form-style-9 ul li .align-left {
+  float: left;
+}
+.form-style-9 ul li .align-right {
+  float: right;
+}
+.form-style-9 ul li textarea {
+  width: 100%;
+  height: 100px;
+}
+.form-style-9 ul li button {
+  max-width: 250px;
+  width: 100%;
+  color: rgb(255, 255, 255);
+  background-color: #f1c50e;
+  padding: 8px;
+  border: solid;
+  border-color: #f1c50e;
+  border-radius: 100px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-family: "Roboto", serif;
+  font-size: 20px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+.form-style-9 ul li button:hover {
+  background-color: rgb(83, 83, 83);
+  border-color: rgb(83, 83, 83);
+  color: rgb(255, 255, 255);
 }
 
 @font-face {
