--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -12,9 +12,12 @@ body{
     color: rgb(51, 51, 51);
     .header-logo-block{
         cursor: pointer;
+        font-size: 20px;
+        font-weight: 900
     }
     @include d-flex(flex, space-between, center);
     .header-ul-block{
+        font-size: 20px;
         @include d-flex(flex, space-between, center);
         .nav-li{
             margin-right: 30px;
@@ -31,9 +34,11 @@ body{
                 }
                 display: none;
             }
+            font-size: 20px;
         }
         .active-li{
             color: $blue;
+            font-weight: 900;
         }
     
     }
@@ -600,4 +605,79 @@ body{
             
     }
     
+}
+
+// contact
+
+.form-style-9{
+
+	max-width: 700px;
+	background: $white;
+	padding: 30px;
+	margin: 50px auto;
+	box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.35);
+	border: 5px solid $yellow;
+    .title{
+        margin-bottom: 30px;
+        font-size: 40px;
+        font-weight: 500;
+    }
+    ul{
+        padding:0;
+        margin:0;
+        list-style:none;
+        li{
+            display: block;
+            margin-bottom: 10px;
+            min-height: 35px;
+            .field-style{
+                box-sizing: border-box; 
+                padding: 8px;
+                outline: none;
+                border: none;
+                border-bottom: 3px solid $grey;
+            }
+            .field-style:focus{
+                box-shadow: 0 5px 6px -6px $grey;
+
+            }
+            .field-split{
+                width: 49%;
+            }
+            .field-full{
+                width: 100%;
+            }
+            .align-left{
+                float:left;
+            }
+            .align-right{
+                float:right;
+            }
+            textarea{
+                width: 100%;
+                height: 100px;
+            }  
+            button{
+                max-width: 250px;
+                width: 100%;
+                color: $white;
+                background-color: $yellow;
+                padding: 8px;
+                border: solid;
+                border-color: $yellow;
+                border-radius: 100px;
+                transition: 0.5s;
+                font-family: $roboto;
+                font-size: 20px;
+                cursor: pointer;
+                margin-top: 10px;
+            }
+            button:hover{
+                background-color: $grey;
+                border-color: $grey;
+                color: $white;
+            }
+
+        }
+    }
 }
