--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,5 +1,6 @@
-@import './reset';
-@import './variables';
-@import './mixin';
-@import './main';
-@import './fonts';
+@import "./reset";
+@import "./variables";
+@import "./mixin";
+@import "./main";
+@import "./fonts";
+@import "./responsive";
