--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -5,7 +5,9 @@ body {
   font-family: $roboto;
   background-color: $begie;
 }
-
+.active-ovelay {
+  display: block;
+}
 // header
 .header-main-div {
   padding: 20px;
@@ -676,5 +678,69 @@ body {
       font-size: 12px;
       font-style: italic;
     }
+  }
+}
+
+// api daata
+.spinner{
+  margin: 0 auto;
+}
+.page-option {
+  .btn {
+    border: none;
+    max-width: 60px;
+    width: 100%;
+    padding: 8px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 18px;
+  }
+}
+.post-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  .card {
+    max-width: 250px;
+    width: 100%;
+    background-color: $white;
+    padding: 15px;
+    margin: 20px;
+    border-radius: 5px;
+    transition: 0.5s;
+    .card-body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+    img {
+      width: 100%;
+    }
+  }
+  .card:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
+}
+.pagination {
+  display: flex;
+  justify-content: space-evenly;
+  .page-item {
+    margin-bottom: 50px;
+    margin-top: 50px;
+    cursor: pointer;
+    transition: 0.5s;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  .page-item:hover {
+    background-color: $white;
+    transform: scale(1.4);
+  }
+  .active {
+    background-color: $white;
+    transform: scale(1.4);
   }
 }
