--- a/css/global.css
+++ b/css/global.css
@@ -45,7 +45,6 @@ table {
 }
 
 input {
-  -webkit-appearance: none;
   border-radius: 0;
 }
 
@@ -1028,6 +1027,47 @@ body {
     margin-top: 15px;
   }
 }
+@media (max-width: 900px) {
+  .visual-section1 .vidual-main-div {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+  .visual-section1 .vidual-main-div .visual-img {
+    max-width: 425px;
+    width: 100%;
+    left: 10%;
+  }
+  .visual-section1 .vidual-main-div .visual-text-div {
+    left: 0%;
+  }
+  .prototype-section {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+  .prototype-section .mySwiper .swiper-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .prototype-section .mySwiper .swiper-wrapper .swiper-slide {
+    margin-top: 30px;
+    max-width: 400px;
+    height: auto;
+  }
+  .prototype-section .mySwiper .swiper-wrapper .swiper-slide h3 {
+    font-size: 20px;
+  }
+  .prototype-section .mySwiper .swiper-wrapper .swiper-slide p {
+    font-size: 15px;
+  }
+  .prototype-section .mySwiper .swiper-wrapper .swiper-slide button {
+    margin-top: 15px;
+  }
+}
 @media (max-width: 500px) {
   .footer {
     -webkit-box-orient: vertical;
@@ -1061,5 +1101,73 @@ body {
   .section3-main-div .text-decor-div {
     background-color: rgb(255, 255, 255);
     margin-top: 15px;
+  }
+}
+@media (max-width: 1230px) {
+  .design-section .design-main-div {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+  .designers-section .designers-div .designers-block {
+    left: 2%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+  .visual-section1 {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+}
+@media (max-width: 900px) {
+  .design-section .design-main-div {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+  .design-section .design-main-div .design-section-div-rect {
+    margin-right: 15px;
+  }
+  .design-section .design-main-div .design-section-div-rect .design-text-div p {
+    display: none;
+  }
+  .design-section .design-main-div .design-section-div-circle {
+    height: auto;
+  }
+  .design-section .design-main-div .design-section-div-circle .dots-design {
+    display: none;
+  }
+  .design-section .design-main-div .design-section-div-circle .design-text-div p {
+    display: none;
+  }
+  .designers-section .designers-div .designers-block {
+    left: 2%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-transform: scale(0.6);
+            transform: scale(0.6);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 20px;
+    bottom: -25%;
+  }
+  .designers-section .designers-div .designers-block .designers {
+    margin-top: 20px;
+    max-width: 400px;
+    width: 100%;
+    height: auto;
+  }
+  .visual-section1 {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+}
+@media (max-width: 600px) {
+  .design-section {
+    display: none;
   }
 }
