--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -74,6 +74,45 @@
   }
 }
 
+@media (max-width: 900px) {
+  .visual-section1 {
+    .vidual-main-div {
+      transform: scale(0.8);
+      .visual-img {
+        max-width: 425px;
+        width: 100%;
+        left: 10%;
+      }
+      .visual-text-div {
+        left: 0%;
+      }
+    }
+  }
+  .prototype-section {
+    transform: scale(0.95);
+    .mySwiper {
+      .swiper-wrapper {
+        flex-direction: column;
+        align-items: center;
+        .swiper-slide {
+          margin-top: 30px;
+          max-width: 400px;
+          height: auto;
+          h3 {
+            font-size: 20px;
+          }
+          p {
+            font-size: 15px;
+          }
+          button {
+            margin-top: 15px;
+          }
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 500px) {
   .footer {
     flex-direction: column;
@@ -105,4 +144,81 @@
       margin-top: 15px;
     }
   }
+}
+
+@media (max-width: 1230px) {
+  .design-section {
+    .design-main-div {
+      transform: scale(0.9);
+    }
+  }
+
+  .designers-section {
+    .designers-div {
+      .designers-block {
+        left: 2%;
+        justify-content: space-evenly;
+        transform: scale(0.8);
+      }
+    }
+  }
+  .visual-section1 {
+    transform: scale(0.9);
+  }
+}
+
+@media (max-width: 900px) {
+  .design-section {
+    .design-main-div {
+      transform: scale(0.9);
+      .design-section-div-rect {
+        margin-right: 15px;
+        .design-text-div {
+          p {
+            display: none;
+          }
+        }
+      }
+      .design-section-div-circle {
+        height: auto;
+        .dots-design {
+          display: none;
+        }
+        .design-text-div {
+          p {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+
+  .designers-section {
+    .designers-div {
+      .designers-block {
+        left: 2%;
+        justify-content: space-evenly;
+        transform: scale(0.6);
+        flex-direction: column;
+        margin-top: 20px;
+        bottom: -25%;
+        .designers {
+          margin-top: 20px;
+          max-width: 400px;
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
+  }
+  .visual-section1 {
+    transform: scale(0.8);
+  }
+}
+
+@media (max-width: 600px) {
+.design-section{
+  display: none;
+}
+
 }
