--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -92,6 +92,9 @@ body {
       line-height: 35px;
       margin-top: 15px;
     }
+    .hide{
+      display: none;
+    }
     .banner-button {
       max-width: 170px;
       width: 100%;
@@ -199,6 +202,10 @@ body {
     .decor-text {
       margin: 20px 0;
     }
+    .hide {
+      display: none;
+    }
+
     button {
       max-width: 180px;
       width: 100%;
@@ -219,6 +226,10 @@ body {
       color: $yellow;
     }
   }
+  img:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
   .decor-img1 {
     max-width: 350px;
     width: 100%;
@@ -229,6 +240,7 @@ body {
     left: 2%;
     box-shadow: 5px 10px 30px $grey;
     object-fit: cover;
+    transition: 0.5s;
   }
   .decor-img2 {
     max-width: 400px;
@@ -241,7 +253,9 @@ body {
     z-index: 1;
     box-shadow: 5px 10px 30px $grey;
     object-fit: cover;
+    transition: 0.5s;
   }
+
   .decor-img3 {
     max-width: 650px;
     width: 100%;
@@ -251,6 +265,7 @@ body {
     right: 0%;
     box-shadow: 5px 10px 30px $grey;
     object-fit: cover;
+    transition: 0.5s;
   }
   .decor-img4 {
     max-width: 500px;
@@ -261,6 +276,7 @@ body {
     right: 5%;
     box-shadow: 5px 10px 30px $grey;
     object-fit: cover;
+    transition: 0.5s;
   }
   .text-decor-div {
     max-width: 350px;
@@ -310,6 +326,9 @@ body {
       .visual-title2 {
         margin: 20px 0;
         line-height: 30px;
+      }
+      .hide{
+        display: none;
       }
       .visual-text {
         font-style: italic;
@@ -400,6 +419,9 @@ body {
         }
         p {
           line-height: 25px;
+        }
+        .hide{
+          display: none;
         }
         button {
           max-width: 100px;
@@ -682,7 +704,7 @@ body {
 }
 
 // api daata
-.spinner{
+.spinner {
   margin: 0 auto;
 }
 .page-option {
